# cplusplus_crypto

./: .gitignore  README.md
doc/my_cryptopp/: doc.md  readme.md
doc/my_libsodium/: chacha.md  readme.md  xchacha.md
project/my_cryptopp/cryptopp_hello/: CMakeLists.txt  main.cpp
project/my_cryptopp/cryptopp_hello/include/: chacha.h
project/my_cryptopp/cryptopp_hello/src/: chacha.cpp
project/my_libsodium/sodium_hello/: CMakeLists.txt  main.c
project/my_libsodium/sodium_hello/include/: chacha.h  rand.h  util.h
project/my_libsodium/sodium_hello/src/: chacha.c  rand.c  util.c
